fix: change the paths to styles and images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>My resume</title>
 </head>
 
@@ -12,7 +12,7 @@
     <div id="container">
         <h1>Alexander Mikhaltsev</h1>
         <div class="person-info">
-            <img src="images/iam.jpg" width="100%"/>
+            <img src="iam.jpg" width="100%"/>
         </div>
         <div class="person-info person-about">I’d like to be a programmer. On this course, I want to improve my knowledge, get
             experience, find new friends. I
